Refactor admin.py, migrations, models.py, and templates for "Get Free 1:1 Consultation" feature

--- a/blogs/templates/blog_list.html
+++ b/blogs/templates/blog_list.html
@@ -1,13 +1,13 @@
 {% extends "_base.html" %}
 {% block title %}Blogs{% endblock %}
 {% block meta_description %}
-    I've been writing online since 2020, mostly about web development and tech careers. Here are some of the blogs I've written. Click on a blog to read more about it.
+    Discover expert insights and tips on web development and digital marketing tailored for luxury restaurants. Explore our blogs for more.
 {% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
         <h1 class="font-montserrat text-3xl font-bold mb-4 text-purple-600">📝 Blogs</h1>
         <p class="mb-4 text-gray-300">
-            I've been writing online since 2020, mostly about web development and tech careers. Here are some of the blogs I've written. Click on a blog to read more about it.
+            Welcome to our blog, where we share valuable insights and tips on web development, digital marketing, and design strategies tailored specifically for luxury restaurants. Click on a blog to explore more.
         </p>
         <!-- Search Form -->
         <h3 class="mb-4 font-inter font-semibold text-teal-500">🔍 Search</h3>
