--- a/core/templates/terms_of_service.html
+++ b/core/templates/terms_of_service.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% block title %}Terms of Service{% endblock %}
 {% block meta_description %}
-    Review the terms of service for Rajarshi Samaddar's web development, design, digital marketing, and SEO services.
+    Review the terms of service for TechRahis' web development, design, digital marketing, and SEO services.
 {% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
         <h1 class="font-montserrat text-3xl font-bold mb-4 text-fuchsia-500">📄 Terms of Service</h1>
         <p class="mb-10 font-opensans">
-            These Terms of Service ("Terms") govern your use of the services offered by me, Rajarshi Samaddar, including web development, design, digital marketing, and SEO services. By using my website or services, you agree to these Terms. Please read them carefully.
+            These Terms of Service ("Terms") govern your use of the services offered by <a href="{% url 'home' %}" class="text-violet-500">TechRahis.com</a>, including web development, design, digital marketing, and SEO services. By using our website or services, you agree to these Terms. Please read them carefully.
         </p>
     </div>
     <div class="space-y-12">
@@ -16,14 +16,14 @@
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-pink-500 mb-4">1. Service Use</h2>
             <p class="text-gray-200 mb-4">
-                By using my services, you confirm that you are at least 18 years old and have the legal authority to enter into this agreement. You agree to provide accurate, complete, and current information when requested.
+                By using our services, you confirm that you are at least 18 years old and have the legal authority to enter into this agreement. You agree to provide accurate, complete, and current information when requested.
             </p>
         </div>
         <!-- Payments and Fees Section -->
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-purple-500 mb-4">2. Payments and Fees</h2>
             <p class="text-gray-200 mb-4">
-                All fees for my services are specified in the service agreements or invoices. Payments are required upfront for certain services, unless otherwise agreed. Non-payment may result in suspension or termination of services.
+                All fees for our services are specified in the service agreements or invoices. Payments are required upfront for certain services unless otherwise agreed. Non-payment may result in suspension or termination of services.
             </p>
             <p class="text-gray-200 mb-4">
                 If any additional services are requested beyond the agreed scope, they will incur additional charges, which will be communicated and agreed upon before commencement.
@@ -33,7 +33,7 @@
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-teal-500 mb-4">3. Intellectual Property</h2>
             <p class="text-gray-200 mb-4">
-                All content, designs, code, and deliverables created as part of my services are owned by me until payment is completed. Upon payment, ownership of the final deliverables is transferred to you, excluding any third-party components (e.g., plugins or stock assets) that remain subject to their respective licenses.
+                All content, designs, code, and deliverables created as part of our services are owned by <a href="{% url 'home' %}" class="text-violet-500">TechRahis.com</a> until payment is completed. Upon payment, ownership of the final deliverables is transferred to you, excluding any third-party components (e.g., plugins or stock assets) that remain subject to their respective licenses.
             </p>
         </div>
         <!-- Client Responsibilities Section -->
@@ -47,7 +47,7 @@
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-pink-500 mb-4">5. Modifications and Revisions</h2>
             <p class="text-gray-200 mb-4">
-                I offer a specified number of revisions as part of my service packages. Any additional modifications beyond the agreed revisions may incur additional charges, which will be communicated to you in advance.
+                We offer a specified number of revisions as part of our service packages. Any additional modifications beyond the agreed revisions may incur additional charges, which will be communicated to you in advance.
             </p>
         </div>
         <!-- Cancellation and Termination Section -->
@@ -61,17 +61,17 @@
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-teal-500 mb-4">7. Warranty and Limitation of Liability</h2>
             <p class="text-gray-200 mb-4">
-                I strive to provide high-quality services, but I do not warrant that the services will be error-free or uninterrupted. In no event shall I be liable for any indirect, incidental, or consequential damages arising out of your use of the services.
+                We strive to provide high-quality services, but we do not warrant that the services will be error-free or uninterrupted. In no event shall <a href="{% url 'home' %}" class="text-violet-500">TechRahis.com</a> be liable for any indirect, incidental, or consequential damages arising out of your use of the services.
             </p>
             <p class="text-gray-200 mb-4">
-                My total liability to you for any claim arising from the use of my services is limited to the amount you have paid for those services.
+                Our total liability to you for any claim arising from the use of our services is limited to the amount you have paid for those services.
             </p>
         </div>
         <!-- Changes to Terms Section -->
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-green-500 mb-4">8. Changes to Terms</h2>
             <p class="text-gray-200 mb-4">
-                I reserve the right to modify these Terms at any time. Any changes will be posted on this page and will take effect immediately upon posting. Your continued use of the services after changes are made constitutes acceptance of the updated Terms.
+                We reserve the right to modify these Terms at any time. Any changes will be posted on this page and will take effect immediately upon posting. Your continued use of the services after changes are made constitutes acceptance of the updated Terms.
             </p>
         </div>
         <!-- Governing Law Section -->
@@ -85,7 +85,7 @@
         <div class="bg-slate-900 p-6 rounded-md">
             <h2 class="font-montserrat text-xl font-bold text-purple-500 mb-4">10. Contact Information</h2>
             <p class="text-gray-200 mb-4">
-                If you have any questions about these Terms, please contact me at <a href="mailto:hi@techrahis.com" class="text-pink-500 hover:underline">hi@techrahis.com</a>.
+                If you have any questions about these Terms, please contact us at <a href="mailto:hi@techrahis.com" class="text-pink-500 hover:underline">hi@techrahis.com</a>.
             </p>
         </div>
     </div>
