--- a/templates/components/social_icon.html
+++ b/templates/components/social_icon.html
@@ -1,4 +1,18 @@
 <li>
+    <a href="tel:+918900424458"
+       target="_blank"
+       class="text-white hover:text-gray-200 text-3xl">
+        <i class="fa-solid fa-phone-square text-3xl"></i>
+    </a>
+</li>
+<li>
+    <a href="mailto:hi@techrahis.com"
+       target="_blank"
+       class="text-white hover:text-gray-200 text-3xl">
+        <i class="fa-solid fa-envelope"></i>
+    </a>
+</li>
+<li>
     <a href="https://x.com/techrahis/"
        target="_blank"
        class="text-white hover:text-gray-200 text-3xl">
@@ -31,12 +45,5 @@
        target="_blank"
        class="text-white hover:text-gray-200 text-3xl">
         <i class="fa-brands fa-instagram"></i>
-    </a>
-</li>
-<li>
-    <a href="mailto:hi@techrahis.com"
-       target="_blank"
-       class="text-white hover:text-gray-200 text-3xl">
-        <i class="fa-solid fa-envelope"></i>
     </a>
 </li>
