--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,16 +1,18 @@
 <footer class="w-full mt-10 font-inter text-white text-sm text-opacity-70 bg-background text-primary py-4 border-t border-gray-800">
     <ul class="flex sm:flex space-x-4 font-inter font-semibold text-gray-400 justify-center mt-2 mb-4">
         <li>
-            <a href="{% url 'contact' %}">Contact</a>
+            <a href="{% url 'contact' %}" aria-label="Contact Us">Contact</a>
         </li>
         <li>
-            <a href="{% url 'privacy_policy' %}">Privacy policy</a>
+            <a href="{% url 'privacy_policy' %}"
+               aria-label="Read our Privacy Policy">Privacy Policy</a>
         </li>
         <li>
-            <a href="{% url 'terms_of_service' %}">Terms of Service</a>
+            <a href="{% url 'terms_of_service' %}"
+               aria-label="View Terms of Service">Terms of Service</a>
         </li>
         <li>
-            <a href="{% url 'faq' %}">FAQs</a>
+            <a href="{% url 'faq' %}" aria-label="Frequently Asked Questions">FAQs</a>
         </li>
     </ul>
     <p class="text-center">
@@ -18,40 +20,20 @@
     target="_blank"
     class="text-violet-600 font-semibold">TechRahis</a>.
     </p>
-    <p class="text-center mt-2 flex flex-row justify-center text-sky-600 font-bold items-center gap-2">
+    <p class="text-center mt-2 flex flex-row justify-center text-blue-600 font-bold items-center gap-2">
         <span class="flex items-center gap-2">
-            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> All systems operational
+            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> Support available at
         </span>
-        <span class="text-white ml-2 text-opacity-70 flex items-center gap-1">
-            <i class="fa-regular fa-clock text-[0.7rem] animate-spin-clock"></i>
-            <span id="current-time"></span> IST
-        </span>
+        <a class="text-violet-500" href="tel:+918900424458">+91 89004 24458</a>
     </p>
 </footer>
 <script>
-    // Function to format the time in HH:mm format
-    function formatTime(date) {
-        let hours = date.getHours().toString().padStart(2, '0');
-        let minutes = date.getMinutes().toString().padStart(2, '0');
-        return `${hours}:${minutes}`;
-    }
-
-    // Function to get the current time in IST
-    function updateTime() {
+    document.addEventListener('DOMContentLoaded', (event) => {
         const now = new Date();
-        const options = { timeZone: 'Asia/Kolkata', year: 'numeric', hour: '2-digit', minute: '2-digit' };
+        const options = { timeZone: 'Asia/Kolkata', year: 'numeric' };
         const formatter = new Intl.DateTimeFormat([], options);
-        const [year, time] = formatter.formatToParts(now).reduce((acc, part) => {
-            if (part.type === 'year') acc[0] = part.value;
-            if (part.type === 'hour' || part.type === 'minute') acc[1] += part.value;
-            return acc;
-        }, ['', '']);
+        const year = formatter.formatToParts(now).find(part => part.type === 'year').value;
         
         document.getElementById('current-year').textContent = year;
-        document.getElementById('current-time').textContent = formatTime(now);
-    }
-
-    // Initial call and setting interval to update the time every minute
-    updateTime();
-    setInterval(updateTime, 60000); // Update every 60 seconds
+    });
 </script>
